--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
       integrity="sha256-oP5uUxywlq68olzn9VvPJQdKbbnVOaBNRfnNsSNklf0="
       crossorigin="anonymous"
     />
-    <title>Gameplan</title>
+    <title>Gameplans</title>
   </head>
 
   <body>
