--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <title>Kanban</title>
+    <title>GamePlan</title>
   </head>
 
   <body>
