got a widget and weather converted

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -51,5 +51,6 @@
     integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk="
     crossorigin="anonymous"
   ></script>
+  <script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 22,cityid: '5586437',appid: 'dc01cfbd8f10d91a05d0da86a4f7f27c',units: 'imperial',containerid: 'openweathermap-widget-22',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
   </body>
 </html>
